# EmailImporter2

./: .gitignore  .replit  main.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  telegram_bot.py
artifacts/api-server/src/: index.ts
artifacts/api-server/src/lib/: bildirim-logger.ts  google-sheets.ts  hatirlatici-scheduler.ts  scanner.ts  scheduler.ts  settings.ts  telegram-bot.ts
artifacts/api-server/src/routes/: activity_logs.ts  auth.ts  backup.ts  bildirimler.ts  hatirlaticilar.ts  health.ts  import-csv.ts  index.ts  notlar.ts  notlar_delete.ts  scanner.ts  settings.ts  sheets.ts  sse.ts  telegram.ts  yetkiler.ts
artifacts/eids-dashboard/: index.html  requirements.yaml
artifacts/eids-dashboard/.replit-artifact/: artifact.toml
artifacts/eids-dashboard/src/: App.tsx  index.css
artifacts/eids-dashboard/src/components/: EtiketBadge.tsx  Layout.tsx  ScannerBanner.tsx  StatCard.tsx  StatusBadge.tsx  delete-dialog.tsx  scanner-banner.tsx  stat-card.tsx  status-badge.tsx  yetki-table.tsx
artifacts/eids-dashboard/src/hooks/: use-eids.ts  use-mobile.ts  use-scanner.ts  use-sse.ts  use-toast.ts  use-yetkiler.ts
artifacts/eids-dashboard/src/lib/: utils.ts
artifacts/eids-dashboard/src/pages/: ayarlar.tsx  baglanti.tsx  bildirim.tsx  dashboard.tsx  gecmis.tsx  (+4 more)
attached_assets/: Pasted-import-imaplib-email-re-datetime-gspread-schedule-time-_1774346347605.txt  Pasted-import-imaplib-email-re-datetime-gspread-schedule-time-_1780296232525.txt  Pasted-import-imaplib-import-email-from-email-utils-import-par_1773867782754.txt
lib/api-spec/: openapi.yaml
(+9 files in other folders)
