[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=47.0.0",
    "google-auth>=2.49.1",
    "gspread>=6.2.1",
    "idna>=3.12",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pytelegrambotapi>=4.32.0",
    "requests>=2.32.6",
    "schedule>=1.2.2",
    "urllib3>=2.5.0",
]
